# Tkinter-CuisineCraft

./: .gitignore  CuisineCraft.db  base.html  check_db.py  database_fixes_summary.md  homepage.css  pyproject.toml  requirements.txt  temp_recipe_Gekruide_kip_met_aardappelblokjes,_selder-,_radijs-_en_appelsalade.txt  temp_recipe_Kipfilet_met_champignonsaus,_broccoli_en_zoete_aardappelfrietjes.txt
.github/: copilot-instructions.md
.github/chatmodes/: planner.chatmode.md
.github/prompts/: create_class.prompt.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
tkinter_gui/: .gitignore  CuisineCraft.db  README.md  config.py  constants.py  db.py  delete rows.sql  events.py  groupby_random_meals.sql  gui.py  helpers.py  importers.py  inner_join.sql  layout.py  logger.py  main.py  models.py  ocr_utils.py  requirements.txt  theme.py  utils.py
tkinter_gui/widgets/: ingredient_entry.py  modern_entry.py
