[project]
name = "cuisinecraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.4",
]
